added bootstrap files

--- a/index.html
+++ b/index.html
@@ -2,49 +2,80 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Starter Template for Bootstrap</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="starter-template.css" rel="stylesheet">
+    <title>rentAPro</title>
+    <link href="/assets/css/bootstrap.css" rel="stylesheet">
   </head>
-
   <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Project name</a>
-        <div class="nav-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <ul class="nav">
+            <li class="active">
+            <a class="brand" href="#">rentAPro</a>
+            </li>
+            <li><a href="wtb.html">WTB</a></li>
+            <li><a href="wts.html">WTS</a></li>
+            <li><a href="account.html">Account</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </div>
-
-    <div class="container">
-
-      <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
-
-    </div><!-- /.container -->
-
-    <script src="assets/js/jquery.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <!DOCTYPE html> 
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>serviceName</th>
+              <th>serviceDuration</th>
+              <th>bid</th>
+              <th>buyOut</th>
+              <th>feedback</th>
+              <th>userName</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>ServiceName</td>
+              <td>ServiceDuration</td>
+              <td>bid</td>
+              <td>buyOut</td>
+              <td>Feedback</td>
+              <td>UserName</td>
+            </tr>
+            <tr>
+              <td>boosting</td>
+              <td>BronzeV-Silver II </td>
+              <td>50€</td>
+              <td>80€</td>
+              <td>90%</td>
+              <td>silverfox</td>
+            </tr>
+            <tr>
+              <td>boosting</td>
+              <td>12 Victories</td>
+              <td>90€</td>
+              <td>100€</td>
+              <td>99%</td>
+              <td>xxSenxx</td>
+            </tr>
+            <tr>
+              <td>coaching</td>
+              <td>20 games</td>
+              <td>20€</td>
+              <td>30€</td>
+              <td>92%</td>
+              <td>Sulfurion</td>
+            </tr>
+            <tr>
+              <td>3v3 Plat team</td>
+              <td>until end of season</td>
+              <td>20€</td>
+              <td>30€</td>
+              <td>10%</td>
+              <td>Sulfukkio</td>
+            </tr>
+          </tbody>
+        </table>
+      </body>
+    </html>
   </body>
 </html>
