--- a/signin/index.html
+++ b/signin/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Signin Template for Bootstrap</title>
+    <title>Signin</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -26,7 +26,7 @@
         <label class="checkbox">
           <input type="checkbox" value="remember-me"> Remember me
         </label>
-        <button class="btn btn-large btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-large btn-primary btn-block"  type="submit">Sign in</button>
       </form>
 
     </div> <!-- /container -->
