--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <div class="container">
           <ul class="nav">
             <li class="active">
-            <a class="brand" href="#">rentAPro</a>
+            <a class="brand" href="index.html">rentAPro</a>
             </li>
             <li><a href="wtb.html">WTB</a></li>
             <li><a href="wts.html">WTS</a></li>
-            <li><a href="account.html">Account</a></li>
+            <li><a href="signin/index.html">Account</a></li>
           </ul>
         </div>
       </div>
@@ -24,6 +24,7 @@
         <table class="table table-striped">
           <thead>
             <tr>
+              <th>type</th>
               <th>serviceName</th>
               <th>serviceDuration</th>
               <th>bid</th>
@@ -34,6 +35,7 @@
           </thead>
           <tbody>
             <tr>
+              <td></td>
               <td>ServiceName</td>
               <td>ServiceDuration</td>
               <td>bid</td>
@@ -42,6 +44,7 @@
               <td>UserName</td>
             </tr>
             <tr>
+              <td>WTB</td>
               <td>boosting</td>
               <td>BronzeV-Silver II </td>
               <td>50€</td>
@@ -50,6 +53,7 @@
               <td>silverfox</td>
             </tr>
             <tr>
+              <td>WTB</td>
               <td>boosting</td>
               <td>12 Victories</td>
               <td>90€</td>
@@ -58,6 +62,7 @@
               <td>xxSenxx</td>
             </tr>
             <tr>
+              <td>WTS</td>
               <td>coaching</td>
               <td>20 games</td>
               <td>20€</td>
@@ -66,6 +71,7 @@
               <td>Sulfurion</td>
             </tr>
             <tr>
+              <td>WTB</td>
               <td>3v3 Plat team</td>
               <td>until end of season</td>
               <td>20€</td>
