--- a/wtb.html
+++ b/wtb.html
@@ -1,27 +1,78 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Fixed layout example with Twitter Bootstrap</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <meta charset="utf-8">
+    <title>rentAPro</title>
+    <link href="/assets/css/bootstrap.css" rel="stylesheet">
   </head>
-
   <body>
-
-    <div class="row">
-
-      <div class="spanx">
-
-        inline elements like span, block level elements like p, div.
-
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <ul class="nav">
+            <li class="active">
+            <a class="brand" href="index.html">rentAPro</a>
+            </li>
+            <li><a href="wtb.html">WTB</a></li>
+            <li><a href="wts.html">WTS</a></li>
+            <li><a href="signin/index.html">Account</a></li>
+          </ul>
+        </div>
       </div>
-
-      repeat <div class="spanx"> y times.
-
-
-        <script src="http://code.jquery.com/jquery.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+    </div>
+    <!DOCTYPE html> 
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>type</th>
+              <th>serviceName</th>
+              <th>serviceDuration</th>
+              <th>bid</th>
+              <th>buyOut</th>
+              <th>feedback</th>
+              <th>userName</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td></td>
+              <td>ServiceName</td>
+              <td>ServiceDuration</td>
+              <td>bid</td>
+              <td>buyOut</td>
+              <td>Feedback</td>
+              <td>UserName</td>
+            </tr>
+            <tr>
+              <td>WTB</td>
+              <td>boosting</td>
+              <td>BronzeV-Silver II </td>
+              <td>50€</td>
+              <td>80€</td>
+              <td>90%</td>
+              <td>silverfox</td>
+            </tr>
+            <tr>
+              <td>WTB</td>
+              <td>boosting</td>
+              <td>12 Victories</td>
+              <td>90€</td>
+              <td>100€</td>
+              <td>99%</td>
+              <td>xxSenxx</td>
+            </tr>
+            <tr>
+              <td>WTB</td>
+              <td>3v3 Plat team</td>
+              <td>until end of season</td>
+              <td>20€</td>
+              <td>30€</td>
+              <td>10%</td>
+              <td>Sulfukkio</td>
+            </tr>
+          </tbody>
+        </table>
       </body>
-
     </html>
+  </body>
+</html>
