added launch page and thankyou.php, not finished

--- a/index.html
+++ b/index.html
@@ -1,87 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta charset="utf-8">
-    <title>rentAPro</title>
-    <link href="/assets/css/bootstrap.css" rel="stylesheet">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+    <meta name="description" content="An awesome coming soon page designed by Orman Clark and coded by João Sardinha" />
+    <meta name="keywords" content="coming, soon, page, orman, clark, john, sardine, johnsardine, download" />
+
+    <title>Coming Soon Splash Page CSS3</title>
+
+    <link rel="stylesheet" href="style.css">
+
   </head>
+
   <body>
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <ul class="nav">
-            <li class="active">
-            <a class="brand" href="index.html">rentAPro</a>
-            </li>
-            <li><a href="wtb.html">WTB</a></li>
-            <li><a href="wts.html">WTS</a></li>
-            <li><a href="signin/index.html">Account</a></li>
-          </ul>
-        </div>
+
+    <div id="coming-soon">
+      <h1>Pros 4 hire</h1>
+      <h2>A marketplace for gamers</h2>
+      <p>sell your skills to the highest bidder, and get paid to do what you love</p>
+      <br/>
+      <div id="tip">
+        <u> add your mail to join the closed beta as soon as it starts!</u>
       </div>
+      <form method="post" action="thankyou.php" >
+        <div id="subscribe">
+          <input type="text" name="email" placeholder="enter your email address...">
+          <input type="submit" value="Go!">
+          <div class="clear"></div>
+        </div>
+      </form>
+      <a href="http://facebook.com/offended" title="Visit our Facebook Page" class="facebook center">Pros 4 hire</a>
+
     </div>
-    <!DOCTYPE html> 
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>type</th>
-              <th>serviceName</th>
-              <th>serviceDuration</th>
-              <th>bid</th>
-              <th>buyOut</th>
-              <th>feedback</th>
-              <th>userName</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td></td>
-              <td>ServiceName</td>
-              <td>ServiceDuration</td>
-              <td>bid</td>
-              <td>buyOut</td>
-              <td>Feedback</td>
-              <td>UserName</td>
-            </tr>
-            <tr>
-              <td>WTB</td>
-              <td>boosting</td>
-              <td>BronzeV-Silver II </td>
-              <td>50€</td>
-              <td>80€</td>
-              <td>90%</td>
-              <td>silverfox</td>
-            </tr>
-            <tr>
-              <td>WTB</td>
-              <td>boosting</td>
-              <td>12 Victories</td>
-              <td>90€</td>
-              <td>100€</td>
-              <td>99%</td>
-              <td>xxSenxx</td>
-            </tr>
-            <tr>
-              <td>WTS</td>
-              <td>coaching</td>
-              <td>20 games</td>
-              <td>20€</td>
-              <td>30€</td>
-              <td>92%</td>
-              <td>Sulfurion</td>
-            </tr>
-            <tr>
-              <td>WTB</td>
-              <td>3v3 Plat team</td>
-              <td>until end of season</td>
-              <td>20€</td>
-              <td>30€</td>
-              <td>10%</td>
-              <td>Sulfukkio</td>
-            </tr>
-          </tbody>
-        </table>
-      </body>
-    </html>
+
   </body>
 </html>
