thankyou.php finished

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           <input type="submit" value="Go!">
           <div class="clear"></div>
         </div>
+        <p> the voices in my head say that we won't spam your inbox </p>
       </form>
       <a href="http://facebook.com/offended" title="Visit our Facebook Page" class="facebook center">Pros 4 hire</a>
 
